Separate listing for incorrect json and .desktop applets

After listing the "proper" applets, list those that have
metadata.desktop, and then those that have a maetadata.json
but is not correct (ie missing "KPackageStructure": "Plasma/Applet")

Unfortunately there isn't a way to get everything to list with a single
query: either the desktop ones or the incorrect json ones will be
missing.

Therefore put separate on one side the legacy queries, which will
hopefully be possible to drop some day

BUG: 477837